# git-issue

./: .gitignore  CMakeLists.txt  README.md
include/: cmd_util.h  commands.h  util.h
src/: cmd_util.cpp  commands.cpp  main.cpp  util.cpp
src/commands/: addCommand.cpp  baseCommand.cpp  closeCommand.cpp  initCommand.cpp  removeCommand.cpp
